--- a/app/src/main/res/layout/fragment_progress_wheel.xml
+++ b/app/src/main/res/layout/fragment_progress_wheel.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
-    tools:context=".progressWheelFragment">
+    tools:context=".ProgressWheel.progressWheelFragment">
 
     <RelativeLayout
         android:id="@+id/level_diplay_container"
@@ -28,7 +28,7 @@
     <View style="@style/Divider"
         android:id="@+id/viewDivider" />
 
-        <com.example.david.myapplication.ProgressWheel
+        <com.example.david.myapplication.ProgressWheel.ProgressWheel
             android:id="@+id/pw_spinner"
             android:layout_width="50dp"
             android:layout_height="50dp"
