Added arrows . fixed cells sizes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="midBlack">#666666</color>
     <color name="whitesmoke">#eeeeee</color>
     <color name="dimGrey">#646464</color>
+    <color name="yellowGradientStart">#ffba16</color>
+    <color name="yellowGradientEnd">#efa903</color>
 </resources>
