--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -32,6 +32,7 @@
             android:layout_below="@+id/questionLayout"
             android:id="@+id/answerLayout"
             android:layout_alignParentStart="true"></LinearLayout>
+
         <Button
             android:text="רמז"
             android:layout_width="wrap_content"
@@ -39,9 +40,9 @@
             android:id="@+id/hint_nutton"
             android:background="@drawable/hint_button_gradient"
             android:textColor="@android:color/background_light"
-            android:layout_below="@+id/answerLayout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="13dp" />
+            android:layout_marginBottom="17dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
