--- a/app/src/main/res/layout/fragment_points.xml
+++ b/app/src/main/res/layout/fragment_points.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.david.myapplication.ToolBar.Points"
+    tools:context="com.example.david.CrossIt.ToolBar.Points"
 
     android:layout_width="130dp"
     android:layout_height="45dp"
