--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,11 @@
         <item name="android:background">@color/bluePrimary</item>
     </style>
 
+    <style name="KeyboardButton">
+        <item name="android:textColor">@color/borderGray</item>
+        <item name="android:elevation">1dp</item>
+        <item name="android:translationZ">1dp</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
 </resources>
